@@ -11565,6 +11565,9 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
 
           <para>- Fixed: repositioning of XPDLString variables inside table is
           now working</para>
+
+          <para>- Improvement: increased dimensions of table for displaying
+          DataFields, FormalParameters, XPDLStrings and I18NVariables</para>
         </listitem>
       </itemizedlist>
     </section>
