@@ -1,4 +1,7 @@
 ###### TWE 5.2-1 RELEASED ######
+2015-08-25 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: Improvement: increased dimensions of table for displaying DataFields, FormalParameters, XPDLStrings and I18NVariables
+
 2015-08-24 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: Fix: repositioning of XPDLString and I18N variables inside table is now working
       
